Updating For Readability on mobile screens and setup for more images

--- a/src/app.css
+++ b/src/app.css
@@ -8,3 +8,16 @@ main {
 .overflow {
     overflow: wrap;
 }
+
+@media (orientation: portrait) {
+    .size {
+        width: 40%
+    }
+}
+
+@media (orientation: landscape) {
+    .size {
+        width: 20%
+    }
+}
+
